[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/game/levels/level1/boss/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/game/levels/level1/boss/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/game/entities/player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/game/levels/level1/boss/Boss.gd" type="Script" id=4]
[ext_resource path="res://src/game/environment/Floor.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/game/hud/hud.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/game/levels/level1/boss/BossMenu.tscn" type="PackedScene" id=7]

[node name="Level1_1" type="Node"]
script = ExtResource( 4 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="Enemy" parent="." instance=ExtResource( 1 )]
position = Vector2( 240, 72 )
collision_mask = 14

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 72, 72 )
gravity = 0

[node name="StateMachine" parent="Player" index="0"]
START_STATE = NodePath("Plane")

[node name="WeaponContainer" parent="Player" index="5"]
position = Vector2( 20.3333, 34.3333 )

[node name="Roof" parent="." instance=ExtResource( 5 )]

[node name="Floor" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 200 )

[node name="Wall" parent="." instance=ExtResource( 5 )]
position = Vector2( -40, -40 )
rotation = 1.5708
scale = Vector2( 0.2, 1 )

[node name="Wall2" parent="." instance=ExtResource( 5 )]
position = Vector2( 261, -48 )
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )

[node name="Wall3" parent="." instance=ExtResource( 5 )]
position = Vector2( 200, -48 )
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )

[node name="Menu" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="die" from="Enemy" to="." method="_on_boss_die"]
[connection signal="exit_requested" from="Menu" to="." method="_on_exit_requested"]
[connection signal="restart_requested" from="Menu" to="." method="_on_restart_requested"]

[editable path="Player"]
